# introduction-role-automation-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  Secrets.toml  compose.yaml
.github/: action.yaml
.github/workflows/: actions.yml
src/: main.rs
src/command/: mod.rs  permission_check.rs
src/handler_utils/: is_bot.rs  mod.rs  permission_checker.rs  text_checker.rs
src/manages/: mod.rs
src/manages/permission/: bot.rs
src/manages/role/: bot.rs  member.rs  mod.rs
