[package]
name = "role-control-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
poise = "0.6.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.197"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model","framework","standard_framework"] }
shuttle-runtime = "0.49.0"
shuttle-serenity = "0.49.0"
thiserror = "2.0.7"
tokio = "1.26.0"
tracing = "0.1.37"
